# ffcmdr

./: .gitignore  README.md  pyproject.toml  setup.py  test.sh
.github/workflows/: publish.yml
examples/: __main__.py
ffcmdr/: __init__.py  arg.py  cmd.py  filter_complex.py  run.py
tests/: test_cmd.py  test_filter_complex.py  test_run.py
