[project]
name = "ffcmdr"
version = "0.3.0"
description = "FFmpeg Command line Helper Library"
authors = [
    {name = "Matthieu Totet",email = "matthieu.totet@gmail.com"}
]
license = {text = "CeCILL-C"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
black = "^25.1.0"
setuptools = "^75.8.0"

