[project]
name = "ffcmdr"
version = "0.3.2"
description = "FFmpeg Command line Helper Library"
authors = [
    {name = "Matthieu Totet",email = "matthieu.totet@gmail.com"}
]
license = {text = "CeCILL-C"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
]
license-files = ["LICEN[CS]E*"]
keywords = ["ffmpeg","command line","media"]

[project.urls]
Homepage = "https://github.com/totetmatt/ffcmdr"
Documentation = "https://github.com/totetmatt/ffcmdr"
Repository = "https://github.com/totetmatt/ffcmdr.git"
Issues = "https://github.com/totetmatt/ffcmdr/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
black = "^25.1.0"
setuptools = "^75.8.0"

